namespace BlzrorWebBookApp.Data.Button
{
    interface ICountable
    {
        int Count { get;}
        void Increment();
    }
}
